@@ -275,6 +275,33 @@ Mod_LoadEntities
 */
 static void Mod_LoadEntities (lump_t *l)
 {
+	char	entfilename[MAX_QPATH];
+	char		*ents;
+	int		mark;
+	unsigned int	path_id;
+
+	strcpy(entfilename, loadmodel->name);
+	COM_StripExtension(entfilename, entfilename, sizeof(entfilename));
+	strcat(entfilename, ".ent");
+	Con_DPrintf("trying to load %s\n", entfilename);
+	mark = Hunk_LowMark();
+	ents = (char *) FS_LoadHunkFile (entfilename, &path_id);
+	if (ents)
+	{
+		// use ent file only from the same gamedir as the map itself
+		if (path_id != loadmodel->path_id)
+		{
+			Hunk_FreeToLowMark(mark);
+			Con_DPrintf("%s ignored (not from the same gamedir)\n", entfilename);
+		}
+		else
+		{
+			loadmodel->entities = ents;
+			Con_DPrintf("Loaded external entity file %s\n", entfilename);
+			return;
+		}
+	}
+
 	if (!l->filelen)
 	{
 		loadmodel->entities = NULL;
